--- a/src/AppLogin.css
+++ b/src/AppLogin.css
@@ -1,7 +1,11 @@
 body {
-    background-color: #161D29;
+    background-color: #11161F;
     width: 100%;
+    height: 100%;
+    background-size: cover;
     color: #fff;
+    background-repeat: no-repeat;
+    /* background-image: url('https://i.pinimg.com/564x/85/41/f1/8541f12cf715a0850d8ad387318d6b80.jpg'); */
 }
 .cartPage {
     margin-top: 50px;
@@ -18,7 +22,7 @@ body {
     flex-direction: column;
     justify-content: end;
     align-items: center;
-    background-image: url('https://sm.mashable.com/mashable_in/photo/default/thor-copy_9gsb.jpg');
+    background-image: url('https://images.comicbooktreasury.com/wp-content/uploads/2022/01/Doctor-Strange-Reading-Order.jpg');
 }
 .box2 {
     height: 100%;
@@ -28,11 +32,15 @@ body {
     flex-direction: column;
     justify-content: end;
     align-items: center;
-    background-image: url('https://d1nslcd7m2225b.cloudfront.net/Pictures/1024x536/4/1/7/1249417_Doctor-Strange-promo-still_starring-Benedict-Cumberbatch.jpg');
+    background-image: url('https://images.alphacoders.com/872/872685.jpg');
 }
 .box1:hover {
-    background-image: url('https://thumbs.gfycat.com/DistinctGoodGalapagossealion-max-1mb.gif');
+    background-image: url('https://c.tenor.com/Ujp8NxZls5cAAAAd/marvel-doctor-strange.gif');
+    background-position: center;
 }
 .box2:hover:hover {
-    background-image: url('https://c.tenor.com/jNGGYr4g4xAAAAAM/benedict-cumberbatch-dr-strange.gif');
+    background-image: url('https://38.media.tumblr.com/9f7e799752bed9468aacb7221d9eb9df/tumblr_nxz5wjsbCR1uo2bb3o1_1280.gif');
+}
+image:hover {
+    scale: 0.40px;
 }
